new list working, pending list working, next interact with their attrs.completed? when on click on childview to rapidly check if I can switch them from comp-column to pend-column. Then right section

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -33,6 +33,7 @@
   padding-top: 35px;
 }
 
+.completed-list-region-Container,
 .pending-list-region-Container,
 .navsection {
   color: white;
@@ -40,4 +41,8 @@
 
 ul li {
   list-style: none;
+}
+
+.completed-list-region-Container {
+  margin-top: 200px;
 }
