switching between completed adn pending and displaying it accomplished. Freezing this feature and switching it to change list name on click childview

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -42,7 +42,11 @@
 ul li {
   list-style: none;
 }
-
+/*
 .completed-list-region-Container {
   margin-top: 200px;
+}*/
+
+.pending-list-region-Container {
+  margin-bottom: 60px;
 }
