Left column finish. Going to the right column

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -50,3 +50,11 @@ ul li {
 .pending-list-region-Container {
   margin-bottom: 60px;
 }
+
+.hidden {
+  display: none;
+}
+
+.shown {
+  display: block;
+}
